@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2013 IBM Corp. and others
+ * Copyright (c) 2006, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -237,7 +237,7 @@ public abstract class AbstractHashMap implements Serializable {
         }
 
         public Object nextElement() {
-            return new Long(nextInt());
+            return Long.valueOf(nextInt());
         }
 
         public long nextInt() {
